Fix links, align button in thead

--- a/ui/components/trees/flavors/grid/index.scss
+++ b/ui/components/trees/flavors/grid/index.scss
@@ -22,3 +22,7 @@
     }
   }
 }
+
+.#{$css-prefix}table--tree__toggle {
+  margin-left: ($spacing-xx-small * -1);
+}
